--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "bs-custom-file-input": "^1.3.4",
-    "byte-base64": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-avatar": "^3.9.4",
@@ -24,6 +23,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@gitlab.com:william.andrade/chit-chat-ui.git"
   },
   "eslintConfig": {
     "extends": "react-app"
